      version, or variants.conf .  (#8221, gwhitney)

    - Add mkdtemp Tcl command to create temporary directories. (#17181, perry)

    - Add select action, which integrates *_select tools into port.
      (#17477, perry)

    - The variants action additionally shows default variants, conflicting
      variants and variants' dependencies. (#14178, #15628, perry)

Release 1.7.1 (unreleased):
    - Create ${applications_dir} and ${frameworks_dir} in destroot
      automatically (r45614, raimue)

    - Make the postflight procedure a bit smarter about which login files
      to update for bash and tcsh (#17588)

    - Add error messages to package installers when the wrong OS package
      is being installed (#13141)

Release 1.7.0 (2008-12-13 by blb):
    - Global variant descriptions using variant_descriptions.conf in the new
      resources directory in the ports tree (#14482, raimue)

    - Move port resources into the ports tree (#14553, raimue and blb)

    - Improve error message when "upgrade outdated" is used (#12288)

    - Properly handle ports whose version evaluates to 0 (#16740, ryandesign)

    - PortIndex is now regenerated atomically (#16234, blb & ryandesign)

    - Improve upon 'port lint' usage by not being too overbearing unless
      --nitpick is used (#14799)

    - Fix reinplace when the filename contains spaces (#17098, ryandesign)

    - Fix python port group issues (#15226)

    - Make sure global variants (from variants.conf) are applied to all
      phases (#11897)

    - Allow configuring --without-objc-runtime --without-objc-foundation,
      for building on platforms without Foundation like +puredarwin (r41015)

    - Changes in loading of configuration files. Currently the global
      configuration file is loaded first, then user defined one (if present),
      PORTSRC environment variable is loaded last. Last defined value is used
      for each configuration option. (#16329, contributed by Adam Byrtek)
