@@ -34,6 +34,8 @@ Release 1.8.0 (unreleased):
       variants and variants' dependencies. (#14178, #15628, perry)
 
 Release 1.7.1 (unreleased):
+    - Add 'apple-gcc-4.2' option to configure.compiler (#16666, ryandesign)
+
     - Create ${applications_dir} and ${frameworks_dir} in destroot
       automatically (r45614, raimue)
 
